ingress-ftn.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ftn-ingress
  namespace: kafka
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ftn.e2ecloud.com  # Replace with your domain or public IP
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ftn-source-io-connector
            port:
              number: 8081
